templates/bastion/cloudformation.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Template to setup bastion in a VPC",
  "Parameters": {
    "VPCStackName": {
      "Description": "Stack Name to get VPC related info",
      "Type": "String",
      "Default": "sample-vpc"
    },
    "ImageId": {
      "Description": "AMI Id for EC2 instance",
      "Type": "String",
      "Default": "ami-7f9b881c"
    },
    "InstanceType": {
      "Description": "EC2 instance family",
      "Type": "String",
      "Default": "t2.micro"
    },
    "SSHKeyName": {
      "Description": "SSH key name for login to EC2 instance",
      "Type": "String",
      "Default": "bastion"
    }
  },
  "Resources": {
    "BastionSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Enable access to the Bastion Host",
        "SecurityGroupEgress": [
          {
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22,
            "CidrIp": { "Fn::ImportValue" :  {"Fn::Sub": "${VPCStackName}-VPCCIDR" } }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 80,
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 443,
            "ToPort": 443,
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22,
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "VpcId": { "Fn::ImportValue" :  {"Fn::Sub": "${VPCStackName}-VPCID" } }
      }
    },
    "BastionLaunchConfig": {
      "Type": "AWS::AutoScaling::LaunchConfiguration",
      "Properties": {
        "AssociatePublicIpAddress": true,
        "ImageId": {"Ref" : "ImageId"},
        "InstanceType": {"Ref" : "InstanceType"},
        "KeyName": {"Ref": "SSHKeyName"},
        "SecurityGroups": [ {"Ref": "BastionSecurityGroup"}],
      }
    },
    "BastionAutoScalingGroup": {
      "Type": "AWS::AutoScaling::AutoScalingGroup",
      "Properties": {
        "Cooldown": 300,
        "HealthCheckGracePeriod": 60,
        "HealthCheckType": "EC2",
        "LaunchConfigurationName": {"Ref":"BastionLaunchConfig"},
        "MaxSize": 1,
        "MinSize": 1,
        "Tags": [
          {
            "Key": "Name",
            "Value": "Bastion",
            "PropagateAtLaunch": true
          }
        ],
        "VPCZoneIdentifier": [
          { "Fn::ImportValue" :  {"Fn::Sub": "${VPCStackName}-PublicSubnetID-1" } },
          { "Fn::ImportValue" :  {"Fn::Sub": "${VPCStackName}-PublicSubnetID-2" } },
          { "Fn::ImportValue" :  {"Fn::Sub": "${VPCStackName}-PublicSubnetID-3" } }
        ],
      }
    }
  }
}
